# GPR922-DeusServerFormative

./: CMakeLists.txt  vcpkg.json
Common/: CMakeLists.txt
Common/include/: ClassType.h  Notif.h  NotifType.h  PacketOperatorOverload.h  Player.h
Common/src/: Notif.cpp  Player.cpp  main.cpp
DeusMulti-Client/src/: main.cpp
DeusMulti-Server/src/: main.cpp
